# trading-cli-bot

./: .env.example  .gitignore  README.md  config.toml  pyproject.toml
scripts/: check_quality_limits.py  deploy_tokyo_marketdata.sh  install_okx_sim_env.sh
src/trading_gateway/app/config/: __init__.py  access.py  loader.py  schema.py
src/trading_gateway/application/maintenance/: __init__.py  okx_position_maintenance.py
src/trading_gateway/application/maintenance/okx_position_maintenance/: __init__.py  models.py  (+5 more)
src/trading_gateway/application/market/: __init__.py  btcusdt_snapshot.py  okx_btc_account.py  specs.py
src/trading_gateway/application/marketdata/: multi.py
src/trading_gateway/application/risk/: okx_algo.py
src/trading_gateway/application/trade_smoke/: planning.py
src/trading_gateway/application/wallet/: policy.py  summary_runner.py
src/trading_gateway/domain/: models.py  route_universe.py
src/trading_gateway/infrastructure/exchange/: account_modes.py  factory.py
src/trading_gateway/interfaces/cli/: app.py  help.py  market.py  risk.py  wallet.py
src/trading_gateway/interfaces/daemon/: runtime.py
src/trading_gateway/interfaces/web/: ops.py  planning.py
src/trading_gateway/support/redaction/: core.py
tests/: fakes.py  test_cli_registration.py  test_maintenance_okx.py  test_market_btcusdt.py  test_market_btcusdt_features.py  test_risk_okx_algo.py  test_standalone_cli.py
tests/cli/: test_okx_sim_lifecycle.py
tests/market/: test_btcusdt_remote.py  test_llm_context_output.py
tests/risk/: test_okx_json_plan.py  test_okx_managed_algo.py
(+85 files in other folders)
