[project]
name = "trading-cli-bot"
version = "0.1.0"
description = "Standalone local CLI bot for the Autotrade workspace."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.scripts]
tbot = "trading_gateway.interfaces.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
